next/core/kubernetes/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front
spec:
  selector:
    app: front
    tier: front
    asghar: akbar
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
