next/core/kubernetes/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: image-processing
spec:
  rules:
    - host: www.anisa.lab
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: front
                port:
                  number: 80
